--- a/GAJaloyan/sample_report/ref.bib
+++ b/GAJaloyan/sample_report/ref.bib
@@ -108,9 +108,10 @@ language={English}
 }
 
 @MISC{Copilot08,
-    author = {NASA},
-    title = {The Copilot Manual},
-    year = {2015}
+    author = {Lee Pike and Nis Wegmann and Sebastian Niller and Chris Hathhorn and Lauren Pick and Georges-Axel Jaloyan},
+    title = {An Introduction to Copilot},
+    year = {2015},
+    howpublished = {The National Institute of Aerospace, Galois Inc., NASA LaRC, Hampton, VA, USA}
 }
 
 @inproceedings{bugC,
